use jakarta.servlet.jsp.jstl 3.0.1, multiple page with person page displaying all data related to list<Person>

--- a/src/main/webapp/WEB-INF/header.html
+++ b/src/main/webapp/WEB-INF/header.html
@@ -1,5 +1,6 @@
 <header>
     <nav class="bg-black">
         <a href="http://localhost:8080">Home</a>
+        <a href="http://localhost:8080/person/list">Persons</a>
     </nav>
 </header>
