add cats so christophe is happy

--- a/src/main/webapp/WEB-INF/header.html
+++ b/src/main/webapp/WEB-INF/header.html
@@ -2,5 +2,6 @@
     <nav class="bg-black">
         <a href="http://localhost:8080">Home</a>
         <a href="http://localhost:8080/person/list">Persons</a>
+        <a href="http://localhost:8080/cat/list">Cats</a>
     </nav>
 </header>
