change to only one controler per entity

--- a/src/main/webapp/WEB-INF/header.html
+++ b/src/main/webapp/WEB-INF/header.html
@@ -1,7 +1,7 @@
 <header>
     <nav class="bg-black">
         <a href="http://localhost:8080">Home</a>
-        <a href="http://localhost:8080/person/list">Persons</a>
-        <a href="http://localhost:8080/cat/list">Cats</a>
+        <a href="http://localhost:8080/persons">Persons</a>
+        <a href="http://localhost:8080/cats">Cats</a>
     </nav>
 </header>
